[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latentscope"
dynamic = ["version"]
description = "Quickly embed, project, cluster and explore a dataset."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ian Johnson" },
]
dependencies = [
    # Core scientific
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "scikit-learn>=1.3,<2",
    "pandas>=2.0,<3",
    "h5py>=3.10,<4",
    # lancedb + pylance are pinned to a tested pair: fresh resolves of
    # lancedb 0.33 + pylance 0.39 break (LanceDataset lost to_pandas).
    # Widen deliberately, with the test suite as the gate.
    "lancedb>=0.30,<0.31",
    "pylance>=0.39,<0.40",
    # ML
    "torch>=2.1,<3",
    "transformers>=4.40,<6",
    "sentence-transformers>=3.0,<6",
    # peft is required by some models' custom code loaded via trust_remote_code
    # (e.g. jina-embeddings-v5, which uses LoRA task adapters).
    "peft>=0.10,<1",
    # Server
    "Flask>=3.0,<4",
    "Flask-Cors>=4.0,<7",
    # Production WSGI server for `ls-serve` (falls back to the Flask dev server
    # only if somehow absent). Core dep so a pip install serves cleanly.
    "waitress>=3,<4",
    # API providers
    "openai>=1.12,<3",
    "anthropic>=0.40",
    "tiktoken>=0.5,<1",
    "mistralai>=1.0,<3",
    "cohere>=5.0,<7",
    "together>=1.0,<3",
    "voyageai>=0.2.3,<1",
    "tokenizers>=0.15,<1",
    # Clustering & dimensionality reduction
    "umap-learn>=0.5.5,<1",
    "hdbscan>=0.8,<1",
    "evoc>=0.3,<1",
    # ML misc
    "outlines>=0.1,<1",
    "nltk>=3.8,<4",
    "latentsae>=0.1.3,<1",
    "datamapplot>=0.5,<1",
    "matplotlib>=3.8,<4",
    # Hugging Face
    "datasets>=2.0,<5",
    "huggingface-hub>=0.24,<2",
    # Util
    "python-dotenv>=1.0,<2",
    "tqdm>=4.66,<5",
    "pylate>=1.6.0",
    # Images (ingest sniffing + image embedding providers import PIL directly)
    "pillow>=10,<14",
]

[project.optional-dependencies]
# GPU acceleration (issue #63). NOT a default dependency: latentscope.util.device
# probes cuML with a guarded import and falls back to CPU when this extra is
# absent. Install with `pip install "latentscope[gpu]"` on a CUDA 12.x box.
#
# cuml-cu12 / cuvs-cu12 are the RAPIDS wheels for the CUDA 12 line. Wheels are
# published on the NVIDIA PyPI index, so installing this extra also needs:
#   --extra-index-url=https://pypi.nvidia.com
#
# VERSION CAP — validated on-device (RTX 5090, driver 570.211.01 = CUDA 12.8):
# an unbounded `>=25.2` resolves to RAPIDS 26.6, whose libcuml is built for
# CUDA 12.9 (needs the nvJitLink 12.9 symbol __nvJitLinkGetLinkedCubinSize_12_9)
# and FAILS to load on a 12.8 driver. RAPIDS 25.2.x is the validated-working set
# on CUDA 12.8. Users on a newer driver (>=12.9) may raise this cap.
#
# You ALSO need a driver-matched torch: the default PyPI torch is a cu130 build
# that reports no CUDA on a 12.8 driver, which disables the GPU path. Install a
# cu128 build first, e.g.:
#   pip install torch --index-url https://download.pytorch.org/whl/cu128
# See docs/gpu-acceleration.md for the full validated install recipe.
gpu = [
    "cuml-cu12==25.2.*",   # validated on CUDA 12.8 (gsv); 26.x needs CUDA 12.9
    "cuvs-cu12==25.2.*",
]
# Model2Vec static embeddings (issue #68). NOT needed for the pre-distilled
# potion models seeded in models/embedding_models.json: those repos are saved
# in sentence-transformers format (a StaticEmbedding module) and load with
# sentence-transformers alone. Install this extra only to distill your own
# Model2Vec models or to load repos published in the raw model2vec format
# (which sentence-transformers loads via StaticEmbedding.from_model2vec).
model2vec = [
    # [distill] pulls the distillation deps (torch, transformers, skeletoken);
    # base model2vec alone can only load raw-format repos, not distill new ones
    "model2vec[distill]>=0.3,<1",
]

[project.urls]
Source = "https://github.com/enjalot/latent-scope"
Tracker = "https://github.com/enjalot/latent-scope/issues"

[project.scripts]
ls-serve = "latentscope.server:start"
ls-init = "latentscope:main"
ls-ingest = "latentscope.scripts.ingest:main"
ls-list-models = "latentscope:list_models"
ls-embed = "latentscope.scripts.embed:main"
ls-embed-debug = "latentscope.scripts.embed:debug"
ls-embed-truncate = "latentscope.scripts.embed:truncate"
ls-embed-importer = "latentscope.scripts.embed:importer"
ls-umap = "latentscope.scripts.umapper:main"
ls-cluster = "latentscope.scripts.cluster:main"
ls-label = "latentscope.scripts.label_clusters:main"
ls-scope = "latentscope.scripts.scope:main"
ls-export-plot = "latentscope.scripts.export_plot:main"
ls-update-embedding-stats = "latentscope.scripts.embed:update_embedding_stats"
ls-sae = "latentscope.scripts.sae:main"
ls-sprites = "latentscope.scripts.sprites:main"
ls-sprite-atlas = "latentscope.scripts.sprite_atlas:main"
ls-download-dataset = "latentscope.scripts.download_dataset:main"
ls-upload-dataset = "latentscope.scripts.upload_dataset:main"

[tool.hatch.version]
path = "latentscope/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["latentscope"]

[tool.hatch.build.targets.sdist]
include = [
    "latentscope/",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "F401",   # unused imports — too noisy during active development
]
exclude = ["web/", "notebooks/", "build/", "dist/", "venv/", "testenv*"]

[tool.ruff.lint.isort]
known-first-party = ["latentscope"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
